; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iscsi/extr_iscsi.c_iscsi_modevent.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iscsi/extr_iscsi.c_iscsi_modevent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i8*)* @iscsi_modevent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iscsi_modevent(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %15 [
    i32 130, label %9
    i32 128, label %11
    i32 129, label %13
  ]

9:                                                ; preds = %3
  %10 = call i32 (...) @iscsi_load()
  store i32 %10, i32* %7, align 4
  br label %17

11:                                               ; preds = %3
  %12 = call i32 (...) @iscsi_unload()
  store i32 %12, i32* %7, align 4
  br label %17

13:                                               ; preds = %3
  %14 = call i32 (...) @iscsi_quiesce()
  store i32 %14, i32* %7, align 4
  br label %17

15:                                               ; preds = %3
  %16 = load i32, i32* @EINVAL, align 4
  store i32 %16, i32* %7, align 4
  br label %17

17:                                               ; preds = %15, %13, %11, %9
  %18 = load i32, i32* %7, align 4
  ret i32 %18
}

declare dso_local i32 @iscsi_load(...) #1

declare dso_local i32 @iscsi_unload(...) #1

declare dso_local i32 @iscsi_quiesce(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
